[gd_scene load_steps=5 format=3 uid="uid://csa2gf1ehqvd3"]

[ext_resource type="Script" path="res://addons/terminal/term.gd" id="1"]
[ext_resource type="Theme" uid="uid://btcfiombdujvu" path="res://addons/terminal/theme/theme.tres" id="2"]

[sub_resource type="SystemFont" id="SystemFont_lfgly"]
font_names = PackedStringArray("Monospace", "Sans-Serif", "Serif")
generate_mipmaps = true
force_autohinter = true
hinting = 2
multichannel_signed_distance_field = true
oversampling = 0.5

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_d4gwl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_lfgly")
text = "
"
draw_control_chars = true
draw_tabs = true
draw_spaces = true
syntax_highlighter = SubResource("SyntaxHighlighter_d4gwl")
minimap_draw = true
caret_type = 1
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Prompt" type="Label" parent="HBoxContainer"]
offset_right = 50.0
offset_bottom = 26.0
text = "res://>"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
offset_left = 54.0
offset_right = 113.0
offset_bottom = 26.0
expand_to_text_length = true
caret_blink = true

[node name="Dialog" type="Window" parent="."]
visible = false

[node name="User" type="LineEdit" parent="Dialog"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -1060.0
offset_bottom = 51.0
grow_horizontal = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="Dialog"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -316.0
offset_right = -1060.0
offset_bottom = -597.0
placeholder_text = "Password"
secret = true

[connection signal="gui_input" from="TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="gui_input" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
